--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -82,3 +82,13 @@ endif()
 if(BENCHMARK)
     add_subdirectory(benchmark)
 endif()
+
+include(CheckIncludeFile)
+file(GLOB proj_headers "include/pqc/*.h")
+foreach(project_header ${proj_headers})
+    get_filename_component(header_name ${project_header} NAME_WE)
+    check_include_file("${project_header}" ${header_name}_IS_STANDALONE)
+    if (NOT ${header_name}_IS_STANDALONE)
+        message(FATAL_ERROR "Header is not self-sufficient: ${project_header}")
+    endif()
+endforeach()
